--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -25,3 +25,26 @@ jobs:
               run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
             - name: python flake8 
               run: docker compose run --rm app sh -c "flake8"
+
+    terraform:
+        name: terraform
+        runs-on: ubuntu-22.04
+        steps:
+            - name: login to docker hub
+              uses: docker/login-action@v3
+              with:
+                username: ${{secrets.DOCKERHUB_USER}}
+                password: ${{secrets.DOCKERHUB_TOKEN}}
+            - name: code checkout
+              uses: actions/checkout@v4
+            - name: terraform init, validate and format code 
+            # flaga do backendu false jest po to zeby nie zuzywac zasobow przy init
+              run: |
+                cd infra/
+                docker compose run --rm terraform -chdir=deploy/ init -backend=false
+                docker compose run --rm terraform -chdir=setup/ init -backend=false
+                docker compose run --rm terraform -chdir=deploy/ validate
+                docker compose run --rm terraform -chdir=setup/ validate
+                docker compose run --rm terraform -chdir=deploy/ fmt -check
+                docker compose run --rm terraform -chdir=setup/ fmt -check
+        
